feat: setup main initial page

--- a/index.html
+++ b/index.html
@@ -1,142 +1,191 @@
-<!DOCTYPE HTML>
-<!--
-	Astral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>Astral by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Jessie Wilson" />
+    <meta name="description" content="Profile" />
+    <meta name="keywords" content="profile" />
+    <title>Jessie Wilson</title>
+    <link rel="stylesheet" type="text/css" href="static/css/index.css" />
+  </head>
+  <body>
+    <container class="container">
+      <header>
+        <h1>Profile</h1>
+      </header>
+      <hr class="hr" />
+      <main>
+        <h2>👋 Summary</h2>
+        <h3>
+          Jessie Wilson, <span class="italic-span">Fullstack developer</span>
+        </h3>
+        <p>
+          <img class="profile-picture" src="static/images/profile.jpg" />
+        </p>
+        <p>
+          Highly proficient Python/JavaScript full stack software developer
+          seeking a challenging role where I can utilize my skills and knowledge
+          to contribute to the development of innovative software solutions.
+        </p>
+        <p>
+          I have 7 years of experience in full stack but I'm not limited to only
+          that skill set.
+        </p>
+        <p>
+          <a href="https://github.com/jlw4049" class="github-link"
+            ><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="m0 0h24v24h-24z"
+                fill="#fff"
+                opacity="0"
+                transform="matrix(-1 0 0 -1 24 24)"
+              />
+              <path
+                d="m12 1a10.89 10.89 0 0 0 -11 10.77 10.79 10.79 0 0 0 7.52 10.23c.55.1.75-.23.75-.52s0-.93 0-1.83c-3.06.65-3.71-1.44-3.71-1.44a2.86 2.86 0 0 0 -1.22-1.58c-1-.66.08-.65.08-.65a2.31 2.31 0 0 1 1.68 1.11 2.37 2.37 0 0 0 3.2.89 2.33 2.33 0 0 1 .7-1.44c-2.44-.27-5-1.19-5-5.32a4.15 4.15 0 0 1 1.11-2.91 3.78 3.78 0 0 1 .11-2.84s.93-.29 3 1.1a10.68 10.68 0 0 1 5.5 0c2.1-1.39 3-1.1 3-1.1a3.78 3.78 0 0 1 .11 2.84 4.15 4.15 0 0 1 1.17 2.89c0 4.14-2.58 5.05-5 5.32a2.5 2.5 0 0 1 .75 2v2.95s.2.63.75.52a10.8 10.8 0 0 0 7.5-10.22 10.89 10.89 0 0 0 -11-10.77"
+                fill="#231f20"
+              /></svg
+            >My Github</a
+          >
+        </p>
+        <hr class="hr" />
+        <h2>💪 Skills</h2>
+        <h3>Languages</h3>
+        <ul>
+          <li>Bash</li>
+          <li>Dart</li>
+          <li>JavaScript/TypeScript</li>
+          <li>Kotlin</li>
+          <li>PHP</li>
+          <li>Python</li>
+          <li>SQL</li>
+        </ul>
+        <h3>Frameworks</h3>
+        <ul>
+          <li>Angular</li>
+          <li>Django</li>
+          <li>Electron</li>
+          <li>FastAPI</li>
+          <li>Flask</li>
+          <li>Next.js</li>
+          <li>Node.js</li>
+          <li>PyQt/PySide</li>
+          <li>Quart</li>
+          <li>React.js</li>
+          <li>Tkinter</li>
+          <li>Wordpress</li>
+        </ul>
+        <h3>Libraries/Tools</h3>
+        <ul>
+          <li>CMake</li>
+          <li>Chocolatey</li>
+          <li>Docker</li>
+          <li>Git</li>
+          <li>Gradle</li>
+          <li>Kubernetes</li>
+          <li>Maven</li>
+          <li>Meson</li>
+          <li>NPM</li>
+          <li>PIP</li>
+          <li>Poetry</li>
+          <li>QT Creator/Designer</li>
+          <li>SQLAlchemy</li>
+          <li>Webpack</li>
+          <li>Yarn</li>
+        </ul>
+        <hr class="hr" />
+        <h2>👨‍💻 Experience</h2>
+        <h3>Muxable, <span class="italic-span">Fullstack/Mobile</span></h3>
+        <span class="italic-span">January 2021 - Current</span>
+        <ul>
+          <li>Create, manage, and update websites for Muxable</li>
+          <li>
+            The most recent website I worked on is
+            <a class="github-link" href="https://www.kaleen.com/">Kaleen</a>
+          </li>
+          <li>
+            Developed responsive web applications with the following frameworks
+            React.js, Node.js, Next.js, WordPress, Angular, FastAPI, Flask,
+            Quart, and Django
+          </li>
+          <li>
+            Experience in front-end development technologies, including HTML,
+            CSS, MaterialUI, Bootstrap, and Tailwind
+          </li>
+          <li>
+            Proficient in building and customizing WordPress websites using
+            themes and plugins
+          </li>
+          <li>Create, manage, and update cross platform mobile applications</li>
+          <li>
+            Experience in cloud services such as AWS, Google Cloud, Firebase,
+            Hetzner, and OHV
+          </li>
+        </ul>
+        <hr class="hr small-hr" />
 
-		<!-- Wrapper-->
-			<div id="wrapper">
-
-				<!-- Nav -->
-					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon brands fa-twitter"><span>Twitter</span></a>
-					</nav>
-
-				<!-- Main -->
-					<div id="main">
-
-						<!-- Me -->
-							<article id="home" class="panel intro">
-								<header>
-									<h1>Jane Doe</h1>
-									<p>Senior Astral Projectionist</p>
-								</header>
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
-								</a>
-							</article>
-
-						<!-- Work -->
-							<article id="work" class="panel">
-								<header>
-									<h2>Work</h2>
-								</header>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
-								<section>
-									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
-									</div>
-								</section>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact" class="panel">
-								<header>
-									<h2>Contact Me</h2>
-								</header>
-								<form action="#" method="post">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
-							</article>
-
-					</div>
-
-				<!-- Footer -->
-					<div id="footer">
-						<ul class="copyright">
-							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+        <h3>
+          Software Developer,
+          <span class="italic-span">Contracts/Freelance</span>
+        </h3>
+        <span class="italic-span">January 2017 - Current</span>
+        <ul>
+          <li>
+            Designed responsive graphical user interfaces using Electron,
+            Tkinter, Flutter, and Kivy for multiple projects, ensuring high
+            usability and user satisfaction.
+          </li>
+          <li>
+            Successfully created and managed PIP packages for various projects,
+            improving code maintainability and scalability
+          </li>
+          <li>
+            Designed and implemented web APIs for multiple applications,
+            ensuring optimal performance and usability
+          </li>
+          <li>
+            Proficient in developing multithreaded and multiprocessing
+            applications using Python, optimizing performance and scalability
+          </li>
+          <li>
+            Created and maintained object-oriented codebases for various
+            projects, improving code quality and maintainability
+          </li>
+          <li>
+            Proficient in version control using Git, including branching,
+            merging, and resolving conflicts
+          </li>
+          <li>
+            Successfully delivered multiple projects using Python, JavaScript,
+            TypeScript, PHP, Kotlin, Dart, and C#, meeting client requirements
+            and exceeding expectations
+          </li>
+          <li>
+            Proficient in designing and implementing relational databases using
+            Postgres, SQLite, and SQL, and experienced in utilizing the
+            SQLAlchemy ORM to simplify database interactions and improve code
+            maintainability
+          </li>
+          <li>
+            Skilled in building out scalable APIs with frameworks such as Quart,
+            FastAPI, Django Rest Framework, Starlette, etc.
+          </li>
+          <li>
+            Experience with NPM, Yarn, Gradle, Webpack, Kubernetes, Maven,
+            Cmake, Chocolatey, and Meson
+          </li>
+          <li>
+            Primarily use VS Code but I have experience in IntelliJ Idea, VIM,
+            Android Studio, PyCharm, and other various lesser-known editors/IDEs
+          </li>
+          <li>
+            In depth experience with QT, QT Creator, and QT Designer for
+            desktop/other misc. environments
+          </li>
+        </ul>
+        <hr class="hr" />
+        <span class="updated-span">Updated 5/7/2024</span>
+      </main>
+    </container>
+  </body>
 </html>
