--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <span
             ><a href="./index.html" class="link">About Me</a> /
             <a href="./foss_projects.html" class="link">FOSS Projects</a> /
-            <a href="./contacts.html" class="link">Contacts</a></span
+            <a href="./contacts.html" class="link">Contact</a></span
           >
         </nav>
       </header>
@@ -40,7 +40,7 @@
           that skill set.
         </p>
         <p>
-          <a href="https://github.com/jlw4049" class="link"
+          <a href="https://github.com/jlw4049" class="link" target="_blank"
             ><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="m0 0h24v24h-24z"
@@ -108,7 +108,9 @@
           <li>Create, manage, and update websites for Muxable</li>
           <li>
             The most recent website I worked on is
-            <a class="link" href="https://www.kaleen.com/">Kaleen</a>
+            <a class="link" href="https://www.kaleen.com/" target="_blank"
+              >Kaleen</a
+            >
           </li>
           <li>
             Developed responsive web applications with the following frameworks
