--- a/foss_projects.html
+++ b/foss_projects.html
@@ -30,6 +30,43 @@
       <main>
         <a
           class="link img-link"
+          href="https://github.com/jlw4049/Blog-Flask"
+          target="_blank"
+          ><img src="static/images/flask.png" alt="flask" />
+          <h2>Flask Blog</h2></a
+        >
+        <h3>
+          Technologies,
+          <span class="italic-span"
+            >Python / Flask / Bootstrap / CSS / HTML / JavaScript / SQL /
+            Docker</span
+          >
+        </h3>
+        <h3>
+          About,
+          <span class="italic-span"
+            >Fully functional blog written in Flask. It has support for basic
+            account management, supports posting/editing/deleting blogs with
+            pagination. This was written written when I initially started
+            learning Flask. You can view the source code at github.</span
+          >
+        </h3>
+        <h3>
+          Working demo
+          <a
+            href="https://jlw4049.pythonanywhere.com/"
+            class="link"
+            target="_blank"
+            >here</a
+          >
+        </h3>
+        <div class="tech-img-box">
+          <img src="static/images/flask_register.png" />
+        </div>
+        <hr class="hr" />
+
+        <a
+          class="link img-link"
           href="https://github.com/jlw4049/HDR-Multi-Tool"
           target="_blank"
           ><img
@@ -198,27 +235,20 @@
         </div>
         <h3>Example</h3>
         <div class="comparison-img-box">
-          <a
-            href="https://images2.imgbox.com/59/bd/woQpbay2_o.png"
-            target="_blank"
-          >
-            <img
-              src="https://camo.githubusercontent.com/ad5b47978884907d3be31265362226e0851a34b37c17b08365c1a517b7519e30/68747470733a2f2f7468756d6273322e696d67626f782e636f6d2f35392f62642f776f5170626179325f742e706e67"
-              alt="Source comparison image"
-            />
-          </a>
-          <a
-            href="https://images2.imgbox.com/96/24/WzCtO3dY_o.png"
-            target="_blank"
-          >
-            <img
-              src="https://camo.githubusercontent.com/06d1c8f2956be4204d0185b2536a183ba02e501dc42fd8e1d7a297eea68ed0ec/68747470733a2f2f7468756d6273322e696d67626f782e636f6d2f39362f32342f577a43744f3364595f742e706e67"
-              alt="Encode comparison image"
-            />
-          </a>
+          <img
+            id="comparison-img-1"
+            src="https://camo.githubusercontent.com/ad5b47978884907d3be31265362226e0851a34b37c17b08365c1a517b7519e30/68747470733a2f2f7468756d6273322e696d67626f782e636f6d2f35392f62642f776f5170626179325f742e706e67"
+            alt="Source comparison image"
+          />
+          <img
+            id="comparison-img-2"
+            src="https://camo.githubusercontent.com/06d1c8f2956be4204d0185b2536a183ba02e501dc42fd8e1d7a297eea68ed0ec/68747470733a2f2f7468756d6273322e696d67626f782e636f6d2f39362f32342f577a43744f3364595f742e706e67"
+            alt="Encode comparison image"
+          />
         </div>
         <hr class="hr" />
       </main>
     </container>
   </body>
+  <script src="static/js/foss_projects.js" type="text/javascript"></script>
 </html>
