feat: add contact

--- a/foss_projects.html
+++ b/foss_projects.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Jessie Wilson - FOSS Projects" />
-    <meta name="description" content="Profile" />
-    <meta name="keywords" content="profile" />
+    <meta name="description" content="Foss" />
+    <meta name="keywords" content="foss" />
     <title>Jessie Wilson - FOSS</title>
     <link rel="stylesheet" type="text/css" href="static/css/index.css" />
     <link
