--- a/contacts.html
+++ b/contacts.html
@@ -1,11 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    WIP
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Jessie Wilson - Contact" />
+    <meta name="description" content="Contact" />
+    <meta name="keywords" content="contact" />
+    <title>Jessie Wilson - Contact</title>
+    <link rel="stylesheet" type="text/css" href="static/css/index.css" />
+  </head>
+  <body>
+    <container class="container">
+      <header>
+        <h1>Contact</h1>
+        <nav>
+          <span
+            ><a href="./index.html" class="link">About Me</a> /
+            <a href="./foss_projects.html" class="link">FOSS Projects</a> /
+            <a href="./contacts.html" class="link">Contact</a></span
+          >
+        </nav>
+      </header>
+      <hr class="hr" />
+      <main>
+        <p>
+          <a
+            href="https://www.linkedin.com/in/jessielwilson/"
+            class="link"
+            target="_blank"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"
+              /></svg
+            >LinkedIn</a
+          >
+        </p>
+        <p>
+          <a href="https://github.com/jlw4049" class="link" target="_blank"
+            ><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="m0 0h24v24h-24z"
+                fill="#fff"
+                opacity="0"
+                transform="matrix(-1 0 0 -1 24 24)"
+              />
+              <path
+                d="m12 1a10.89 10.89 0 0 0 -11 10.77 10.79 10.79 0 0 0 7.52 10.23c.55.1.75-.23.75-.52s0-.93 0-1.83c-3.06.65-3.71-1.44-3.71-1.44a2.86 2.86 0 0 0 -1.22-1.58c-1-.66.08-.65.08-.65a2.31 2.31 0 0 1 1.68 1.11 2.37 2.37 0 0 0 3.2.89 2.33 2.33 0 0 1 .7-1.44c-2.44-.27-5-1.19-5-5.32a4.15 4.15 0 0 1 1.11-2.91 3.78 3.78 0 0 1 .11-2.84s.93-.29 3 1.1a10.68 10.68 0 0 1 5.5 0c2.1-1.39 3-1.1 3-1.1a3.78 3.78 0 0 1 .11 2.84 4.15 4.15 0 0 1 1.17 2.89c0 4.14-2.58 5.05-5 5.32a2.5 2.5 0 0 1 .75 2v2.95s.2.63.75.52a10.8 10.8 0 0 0 7.5-10.22 10.89 10.89 0 0 0 -11-10.77"
+                fill="#231f20"
+              /></svg
+            >GitHub</a
+          >
+        </p>
+      </main>
+    </container>
+  </body>
+  <script src="static/js/foss_projects.js" type="text/javascript"></script>
 </html>
