chore: re-organize refactor: add curve borders to comparison images

--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
         <nav>
           <span
             ><a href="./index.html" class="link">About Me</a> /
-            <a href="./foss_projects.html" class="link">FOSS Projects</a> /
-            <a href="./contacts.html" class="link">Contact</a></span
+            <a href="./static/templates/foss_projects.html" class="link"
+              >FOSS Projects</a
+            >
+            /
+            <a href="./static/templates/contacts.html" class="link"
+              >Contact</a
+            ></span
           >
         </nav>
       </header>
