feat: add mobile app work

--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@
             >
           </li>
           <li>
+            The most recent mobile app I worked on is
+            <a class="link" href="https://chat.rtirl.com/">RTChat</a>
+          </li>
+          <li>
             Developed responsive web applications with the following frameworks
             React.js, Node.js, Next.js, WordPress, Angular, FastAPI, Flask,
             Quart, and Django
