fix: spelling/grammar

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
           <img class="profile-picture" src="static/images/profile.jpg" />
         </p>
         <p>
-          Highly proficient Python/JavaScript full stack software developer
+          Highly proficient Python/JavaScript full-stack software developer
           seeking a challenging role where I can utilize my skills and knowledge
           to contribute to the development of innovative software solutions.
         </p>
         <p>
-          I have 7 years of experience in full stack but I'm not limited to only
-          that skill set.
+          I possess 7 years of comprehensive experience in full-stack
+          development, yet I am not confined solely to this expertise.
         </p>
         <p>
           <a href="https://github.com/jlw4049" class="link" target="_blank"
