feat: add navigation 'Projects'

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <nav>
           <span
             ><a href="./index.html" class="link">About Me</a> /
+            <a href="./static/templates/projects.html" class="link">Projects</a>
+            /
             <a href="./static/templates/foss_projects.html" class="link"
               >FOSS Projects</a
             >
