--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
           to contribute to the development of innovative software solutions.
         </p>
         <p>
-          I possess 7 years of comprehensive experience in full-stack
+          I possess 9 years of comprehensive experience in full-stack
           development, yet I am not confined solely to this expertise.
         </p>
         <p>
-          <a href="https://github.com/jlw4049" class="link" target="_blank"
+          <a href="https://github.com/jessielw" class="link" target="_blank"
             ><svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="m0 0h24v24h-24z"
